--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,5 @@
     </style>
 
     <style name="Theme.MyAppMVVMCleanArchitectureSample" parent="Base.Theme.MyAppMVVMCleanArchitectureSample" />
+    <style name="Toolbar" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
